Lesson 5 init commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="settings_open">Settings has opened</string>
+    <string name="history_open">History has opened</string>
+
+
+
 </resources>
