--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">Dictionary</string>
     <string name="error_textview_stub">Error</string>
+    <string name="error_stub">Error</string>
     <string name="reload_button">Reload</string>
     <string name="undefined_error">Undefined error</string>
     <string name="empty_server_response_on_success">Response from server is empty</string>
     <string name="button_search">Search</string>
     <string name="search_hint">New word</string>
     <string name="delete_description">X</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nav_header_title">Dictionary</string>
     <string name="nav_header_subtitle">SkyEng Api</string>
@@ -25,6 +26,7 @@
     <string name="dialog_message_device_is_offline">You can not use app without internet connection. Please, check
         internet connection.
     </string>
+    <string name="dialog_tittle_sorry">Sorry</string>
 
 
 </resources>
